<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.banklite</groupId>
    <artifactId>sistema-bancario-java</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>BankLite</name>

    <description>
        Sistema bancário em Java com foco em regras de domínio,
        testes unitários e modelagem orientada a objetos.
    </description>

    <properties>

        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <project.build.sourceEncoding>
            UTF-8
        </project.build.sourceEncoding>

    </properties>

    <dependencies>
        <!-- JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Java Compiler -->
            <plugin>

                <groupId>
                    org.apache.maven.plugins
                </groupId>

                <artifactId>
                    maven-compiler-plugin
                </artifactId>

                <version>3.13.0</version>

                <configuration>

                    <source>21</source>
                    <target>21</target>

                </configuration>

            </plugin>

            <!-- Run Tests -->
            <plugin>

                <groupId>
                    org.apache.maven.plugins
                </groupId>

                <artifactId>
                    maven-surefire-plugin
                </artifactId>

                <version>3.2.5</version>

            </plugin>

            <!-- Code Coverage -->
            <plugin>

                <groupId>org.jacoco</groupId>

                <artifactId>
                    jacoco-maven-plugin
                </artifactId>

                <version>0.8.12</version>

                <executions>

                    <execution>

                        <goals>

                            <goal>
                                prepare-agent
                            </goal>

                        </goals>

                    </execution>

                    <execution>

                        <id>report</id>

                        <phase>test</phase>

                        <goals>

                            <goal>report</goal>

                        </goals>

                    </execution>

                </executions>

            </plugin>

        </plugins>

    </build>

</project>
